# spotify-more-or-less

./: .dockerignore  .env.example  .gitignore  DATA_SOURCE_CONFIG.md  Dockerfile  README-Docker.md  README.md  docker-compose.yml  start.sh
.github/workflows/: docker-image.yml
app/: .env.example  Cargo.toml
app/src/: config.rs  extended_history.rs  main.rs  spotify.rs  storage.rs  types.rs
app/src/api/: routes.rs
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: song-card.tsx  song-game.tsx
web/lib/: api.ts  schema.d.ts  types.ts
