[package]
name = "Spotify-More-Less"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
utoipa = "5.4.0"
serde = { version = "1.0.219", features = ["derive"] }
utoipa-axum = "0.2.0"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.10.0-rc.0"
indexmap = "2.12.1"
serde_json = "1.0.143"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
axum-macros = "0.5.0"
